--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
       <button id="toggleSourceButton">Use Microphone</button>
       <button id="startButton">Start Visualization</button>
     </div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
