Rename music toggle button to visualization toggle; update related functionality in main.ts

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
   <div id="controls">
     <button id="toggleSourceButton">Use Microphone</button>
-    <button id="toggleMusicButton">Start Music</button>
+    <button id="toggleVisualizationButton">Start Visualization</button>
   </div>
   <script type="module" src="/src/main.ts"></script>
 </body>
